Change color variables names
Remove color names from the variables names so they can be any colors.

--- a/static/less/global/footer.less
+++ b/static/less/global/footer.less
@@ -1,6 +1,6 @@
 footer {
-    background-color: @gg-blue;
-    color: @gg-grey;
+    background-color: @color-primary;
+    color: @color-background;
     padding: 30px 0;
     font-size: 0.9em;
     overflow: hidden;
