--- a/static/less/global/main.less
+++ b/static/less/global/main.less
@@ -2,7 +2,7 @@ body,
 .view-login,
 .view-register,
 .view-passwordreset {
-    background-color: @gg-grey;
+    background-color: @color-background;
 
     @import 'header.less';
     @import 'modal.less';
