--- a/static/less/global/modal.less
+++ b/static/less/global/modal.less
@@ -12,7 +12,7 @@
     }
 
     button.dismiss:not(.close-modal) {
-        .ionisx-btn(@white, @gg-alt-blue);
+        .ionisx-btn(@white, @color-secondary);
     }
 }
 
@@ -33,7 +33,7 @@
                 font-weight: @headings-font-weight;
                 text-transform: none;
                 text-align: center;
-                color: @gg-blue;
+                color: @color-primary;
             }
         }
 
@@ -71,7 +71,7 @@
             }
 
             button[type=submit] {
-                .ionisx-btn(@white, @gg-alt-blue);
+                .ionisx-btn(@white, @color-secondary);
             }
         }
     }
