--- a/static/less/mixins/alert.less
+++ b/static/less/mixins/alert.less
@@ -39,8 +39,8 @@
 }
 
 .ionisx-alert-error {
-    background-color: @gg-pomegranate;
-    color: @gg-grey;
+    background-color: @color-error;
+    color: @color-background;
 
     h1, h2, h3, h4, h5 {
         color: @white;
@@ -58,7 +58,7 @@
 
 
 .ionisx-alert-warning {
-    background-color: @gg-orange;
+    background-color: @color-warning;
     color: @white;
 
     h1, h2, h3, h4, h5 {
