--- a/static/less/mixins/button.less
+++ b/static/less/mixins/button.less
@@ -58,7 +58,7 @@
     }
 }
 
-.ionisx-btn-disabled(@fg-color: @gg-disabled-grey) {
+.ionisx-btn-disabled(@fg-color: @color-disabled) {
     .ionisx-btn(@fg-color, @white);
 
     cursor: default;
