--- a/static/less/mixins/checkbox.less
+++ b/static/less/mixins/checkbox.less
@@ -23,7 +23,7 @@
         position: absolute;
         border: 1px solid @white;
         border-radius: @default-border-radius;
-        background-color: @gg-blue;
+        background-color: @color-primary;
         text-align: center;
         top: 2px;
         left: -1px;
