--- a/static/less/mixins/modal.less
+++ b/static/less/mixins/modal.less
@@ -22,7 +22,7 @@
     .inner-wrapper {
         overflow: visible;
         background: none;
-        background-color: @gg-grey;
+        background-color: @color-background;
         border: 1px solid fadeout(@black, 20%);
         border-radius: @default-border-radius;
         padding: 40px;
@@ -84,7 +84,7 @@
             input, textarea {
                 font: inherit;
                 border-radius: @default-border-radius;
-                border: 1px solid @gg-border-grey;
+                border: 1px solid @color-border;
                 outline: none;
             }
 
@@ -106,7 +106,7 @@
                 margin: 2em 0 0 0;
 
                 input[type=submit] {
-                    .ionisx-btn(@white, @gg-alt-blue);
+                    .ionisx-btn(@white, @color-secondary);
                 }
             }
         }
