--- a/static/less/pages/course/book.less
+++ b/static/less/pages/course/book.less
@@ -13,7 +13,7 @@
         display: block;
         font: inherit;
         float: left;
-        border: 1px solid @gg-border-grey;
+        border: 1px solid @color-border;
         border-radius: @default-border-radius;
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
@@ -34,7 +34,7 @@
             font-size: 0.9em;
 
             a, a:hover {
-                color: @gg-blue;
+                color: @color-primary;
             }
         }
     }
@@ -45,7 +45,7 @@
         .make-lg-column(9);
 
         display: block;
-        border: 1px solid @gg-border-grey;
+        border: 1px solid @color-border;
         border-left: 0 none;
         border-radius: @default-border-radius;
         border-top-left-radius: 0;
