--- a/static/less/pages/course/main.less
+++ b/static/less/pages/course/main.less
@@ -57,12 +57,12 @@
                         box-shadow: none;
                         text-shadow: none;
                         background: none;
-                        background-color: @gg-blue;
+                        background-color: @color-primary;
                         color: @white;
                     }
 
                     &.new-post-btn {
-                        .ionisx-btn(@white, @gg-alt-blue);
+                        .ionisx-btn(@white, @color-secondary);
 
                         font-size: 0.9em;
 
@@ -101,7 +101,7 @@
         box-shadow: none;
         background: none;
         background-color: @white;
-        border: 1px solid @gg-border-grey;
+        border: 1px solid @color-border;
         border-radius: @default-border-radius;
         overflow: hidden;
 
