--- a/static/less/pages/course/progression.less
+++ b/static/less/pages/course/progression.less
@@ -16,7 +16,7 @@
                 font: inherit;
                 font-size: @font-size-h2;
                 font-weight: @headings-font-weight;
-                color: @gg-blue;
+                color: @color-primary;
                 border: 0 none;
                 padding: 0;
                 margin: 0;
