--- a/static/less/pages/courses.less
+++ b/static/less/pages/courses.less
@@ -39,7 +39,7 @@
 
                 &:hover {
                     box-shadow: none;
-                    border-color: @gg-blue;
+                    border-color: @color-primary;
                 }
 
                 .inner-wrapper {
@@ -47,7 +47,7 @@
 
                     .course-preview {
                         box-shadow: none;
-                        border-bottom: 1px solid @gg-border-grey;
+                        border-bottom: 1px solid @color-border;
                         background: none;
                         background-color: fadeout(@white, 10%);
 
