--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -42,7 +42,7 @@ body,
                     display: block;
                     font: inherit;
                     font-size: @font-size-h1;
-                    color: @gg-blue;
+                    color: @color-primary;
                     text-transform: none;
                 }
 
