--- a/static/less/pages/password-reset.less
+++ b/static/less/pages/password-reset.less
@@ -24,7 +24,7 @@
 
         a {
             font: inherit;
-            color: @gg-blue;
+            color: @color-primary;
         }
 
         form {
@@ -60,7 +60,7 @@
 
             .form-actions {
                 button[type=submit] {
-                    .ionisx-btn(@white, @gg-emerald);
+                    .ionisx-btn(@white, @color-success);
 
                     @media (min-width: @screen-md-min) {
                         .square(auto);
@@ -93,7 +93,7 @@
 
         a {
             font: inherit;
-            color: @gg-blue;
+            color: @color-primary;
         }
     }
 }
