--- a/static/less/pages/register.less
+++ b/static/less/pages/register.less
@@ -19,7 +19,7 @@
 
         a {
             font: inherit;
-            color: @gg-blue;
+            color: @color-primary;
         }
 
         form {
@@ -58,7 +58,7 @@
             }
 
             .field.is-focused label {
-                color: @gg-blue;
+                color: @color-primary;
             }
 
             input[type=text],
@@ -79,7 +79,7 @@
 
             .form-actions {
                 button[type=submit] {
-                    .ionisx-btn(@white, @gg-alt-blue);
+                    .ionisx-btn(@white, @color-secondary);
 
                     @media (min-width: @screen-md-min) {
                         .square(auto);
@@ -112,7 +112,7 @@
 
         a {
             font: inherit;
-            color: @gg-blue;
+            color: @color-primary;
         }
     }
 }
