--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -14,7 +14,7 @@ h1 {
 }
 
 h2 {
-    color: @gg-blue;
+    color: @color-primary;
     text-transform: none;
 }
 
@@ -23,7 +23,7 @@ h3 {
 }
 
 h4 {
-    color: @gg-blue;
+    color: @color-primary;
     font-weight: 500;
 }
 
@@ -48,7 +48,7 @@ ul {
 a, a:link, a:visited,
 p a, p a:link, p a:visited {
     font: inherit;
-    color: @gg-blue;
+    color: @color-primary;
     outline: none;
 
     &:hover, &:focus, &:active {
@@ -76,22 +76,22 @@ textarea {
 
 ::-webkit-input-placeholder {
     font: inherit;
-    color: @gg-disabled-grey;
+    color: @color-disabled;
 }
 
 :-moz-placeholder {
     font: inherit;
-    color: @gg-disabled-grey;
+    color: @color-disabled;
 }
 
 ::-moz-placeholder {
     font: inherit;
-    color: @gg-disabled-grey;
+    color: @color-disabled;
 }
 
 :-ms-input-placeholder {
     font: inherit;
-    color: @gg-disabled-grey;
+    color: @color-disabled;
 }
 
 .row {
