--- a/static/less/pages/login.less
+++ b/static/less/pages/login.less
@@ -19,7 +19,7 @@
 
         a {
             font: inherit;
-            color: @gg-blue;
+            color: @color-primary;
         }
 
         form {
@@ -66,7 +66,7 @@
 
             .form-actions {
                 button[type=submit] {
-                    .ionisx-btn(@white, @gg-alt-blue);
+                    .ionisx-btn(@white, @color-secondary);
 
                     @media (min-width: @screen-md-min) {
                         .square(auto);
@@ -99,7 +99,7 @@
 
         a {
             font: inherit;
-            color: @gg-blue;
+            color: @color-primary;
         }
     }
 }
