--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -5,19 +5,19 @@
 @white: #fff;
 @black: lighten(#000, 8%);
 
-@gg-blue: #3ea5ce;
-@gg-grey: #eef0f1;
-@gg-alt-blue: #0f70b7;
+@color-primary: #3ea5ce;
+@color-secondary: #0f70b7;
+@color-background: #eef0f1;
 
-@gg-pomegranate: #c0392b;
-@gg-emerald: #2ecc71;
-@gg-orange: #f39c12;
+@color-error: #c0392b;
+@color-success: #2ecc71;
+@color-warning: #f39c12;
 
-@gg-disabled-grey: #bdc3c7;
-@gg-border-grey: #ddd;
+@color-disabled: #bdc3c7;
+@color-border: #ddd;
 
 // Misc
-@hr-border: @gg-border-grey;
+@hr-border: @color-border;
 
 
 ////////////////////////////////////////////////////////////////////////
